--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^3.4",
         "symfony/lts": "^3",
-        "symfony/yaml": "^3.4"
+        "symfony/yaml": "^3.4",
+        "twig/twig": "^2.0"
     },
     "require-dev": {
         "symfony/dotenv": "^3.4",
